Fixed media not showing

--- a/app/assets/stylesheets/custom/style.css.scss
+++ b/app/assets/stylesheets/custom/style.css.scss
@@ -347,7 +347,6 @@ tr.tablesorter-filter-row input.disabled {
 }
 
 .documentTypesTabs {
-	.tab-pane {
 		thead {
 
 			th {
@@ -371,7 +370,6 @@ tr.tablesorter-filter-row input.disabled {
 		.table {
 			background:#FFF;
 		}
-	}
 }
 
 .tssPopover {
